src/www/css/kaichronicles.css
body {
    padding-top: 50px;
}

html {
    /* Always show the scroll bar, to avoid "re-layout" when you move from a section
      without scroll to other with scroll */
    overflow-y: scroll;
}
body.modal-open {
    /* And this is needed to avoid the margin on modals */
    padding-right: 0!important;
}

#content {
    padding: 40px 15px;
}

#content , .modal-dialog , blockquote {
    font-family: Souvenir, Georgia, "Times New Roman", Times, serif;
    font-size: 16px;
}

blockquote {
    font-style: italic;
}

p, ol, ul, dl, blockquote { text-align: justify }

ul.unbulleted { list-style-type: none }

h1 {
    margin-top: 0;
    margin-bottom: 15px;
}

/* Subsection titles */
h4 {
    font-weight: bold;
}

/* Center illustrations */
div.illustration {
    text-align: center;
    margin: 0 0 10px;
}

/* Do not render images outside the screen by default */
div.illustration img {
    max-width: 100%;
}

/* Render with its original size, when the user clicks on the image */
div.illustration img.originalsize {
    max-width: initial;
}

/* Illustration description */
.illustration-label {
    text-align: center;
    font-size: small;
    font-style: italic;
}

/* Choices */
.choice {
    margin-left: 15px;
    text-align: left;
}

/* Disabled raw links */
.disabled {
    opacity: 0.65;
    pointer-events: none;
}

/* Actions links */
.action {
    font-weight: bold;
}

/* Disabled action links */
.action.disabled {
    color: gray;
}
/* Already picked random table links */
.action.random.picked {
    color: black;
    font-weight: bold;
    opacity: 1;
}

/* List tables */
.list-table {
    border: solid 1px #ddd;
    margin-left: 0;
    margin-bottom: 1.25em;
    list-style-type: none;
    padding-left: 0;
}
.list-table p {
    margin-bottom: 0;
}
.list-table li {
    padding: 0.9375em;
    color: #333;
    font-weight: normal;
    border-bottom: dotted 1px #ddd;
}
.list-table > li:nth-of-type(2n+1) {
    background-color: #f9f9f9;
}

/* Table with definition lists */
.table-dl dl {
    margin-bottom:0;
}
.table-dl dd {
    margin-left: 5px;
    margin-right: 5px;
}

/* Tables with bold texts on header */
table.bold-head > thead > tr > td {
    font-weight: bold;
}

/* Foot notes */
.footnotes {
    font-size: 0.8em;
}

/* Player attribute */
.attribute {
    font-size: 0.8em;
}

/* Table operations */
.table-op {
    float: right;
    margin-left: 5px;
}

/* Image for objects table */
.inventoryImgContainer {
    display: inline-block;
    width: 100px;
    height: 30px;
    text-align: center;
}
.inventoryImg {
    max-width: 100px;
    max-height: 30px;
}

/* Sing posts */
div.signpost {
    line-height: 1.5em;
    padding-bottom: 1em;
    padding-top: 1em;
    text-align: center;
}

/* Position for toasts, below the title bar */
.toast-position-lw {
    top:60px;
    right:12px
}

/* Remove toastr icons */
#toast-container>.toast-success, #toast-container>.toast-info, 
#toast-container>.toast-warning, #toast-container>.toast-error {
    background-image: none!important;
}
#toast-container > div {
    padding: 15px!important;
}

/* Action chart bonuses descriptions */
.bonuses {
    font-size: small;
    font-style: italic;
    padding-left: 12px;
    padding-top: 3px; 
}

/* Combats */
.combat td {
    text-align: center;
}

/* Large buttons */
.large-button {
    /*display: block;*/
    width: 100%;
    text-align: left;
    white-space: normal;
    margin-bottom: 15px;
}
.large-button img { 
    max-width: 25%;
    margin: 5px 0;
    margin-right: 10px;
}

/* Multiline text on buttons */
.multilinebtn {
    white-space: normal;
}

/* The statistics on header is like a link */
#template-statistics {
    cursor: pointer;
}

/* Style to force to hide the toggle menu button */
.hideImportant {
    display: none!important;
}

/* Highlight the page title */
.navbar-brand.active {
    color: #fff;
}

/* Allow to break words (and URLs!) */
.breakable {
    word-wrap: break-word;
}

/* To disable bootstrap menu transition animations */
.no-transition {
  -webkit-transition: height 0.01s;
  -moz-transition: height 0.01s;
  -ms-transition: height 0.01s;
  -o-transition: height 0.01s;
  transition: height 0.01s;
}

/* Main title for book parts (see book4, sect 1: "Part I") */
.book-section-title {
    text-align: center;
    margin-bottom: 5px;
}

/* Death UI */
#mechanics-death p , #mechanics-death div {
    text-align: center;
}

/* Centered column table */
td.center {
    text-align: center;
}

/* Disable animations on bootstrap progress bar (performance) */
.progress-bar {
    -webkit-transition: none;
    -moz-transition: none;
    -ms-transition: none;
    -o-transition: none;
    transition: none;
}​

/* Random table size */
#template-containertable {
    border-style: solid!important;
    border-width: 1px!important;
    border-color: #ccc!important;
}
#template-containertable td {
    padding: 2px!important;
    text-align: center;
    font-weight: bold;
    cursor: pointer;
}
/* Random table coloring */
#template-containertable tbody tr:nth-child(odd) td:nth-child(odd) {
   background-color: #ccc;
}
#template-containertable tbody tr:nth-child(even) td:nth-child(even) {
   background-color: #ccc;
}


/**
 * Dark Theme coloring
*/
body.dark {
    background: #222;
    color: #ccc;
}


body.dark .action.random.picked {
    color: #ddd;
}

body.dark .well,
body.dark .modal-content {
    background: #333;
}

body.dark .btn img {
    filter: invert(87%);
}

body.dark .btn-default, 
body.dark .form-control[disabled], 
body.dark .form-control[readonly], 
body.dark fieldset[disabled], 
body.dark .form-control {
    color: #ccc;
    background-color: #333;
    border-color: #ddd;
}

/* List tables */
body.dark .list-table {
    border-color: #ddd;
}
body.dark .list-table li {
    color: #ccc;
    border-color: #ddd;
}
body.dark .list-table > li:nth-of-type(odd),
body.dark .table-striped>tbody>tr:nth-of-type(odd) {
    background-color: #333;
}

body.dark #template-containertable tbody tr:nth-child(odd) td:nth-child(odd),
body.dark #template-containertable tbody tr:nth-child(even) td:nth-child(even) {
    background-color: #222;
 }

body.dark #template-containertable {
    border-color: #ddd!important;
}

/** Downloaded book on Work With Books */
body.dark #wwbooks-list tr.success > td {
    background-color: #001a00;
}

